--- a/package.json
+++ b/package.json
@@ -47,43 +47,41 @@
   },
   "homepage": "https://github.com/tfarras/nestjs-firebase-auth#readme",
   "peerDependencies": {
-    "@nestjs/common": "^7.6.15",
-    "@types/passport-jwt": "^3.0.5",
-    "firebase-admin": "^9.6.0",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "@nestjs/common": "^9.4.0",
+    "@types/passport-jwt": "^3.0.8",
+    "firebase-admin": "^11.8.0",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.6.0",
-    "@nestjs/common": "^7.6.15",
-    "@nestjs/core": "^7.6.15",
-    "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.15",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.36",
-    "@types/passport-jwt": "^3.0.5",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "firebase-admin": "^9.6.0",
-    "jest": "^26.6.3",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "prettier": "^2.2.1",
+    "@nestjs/cli": "^9.4.2",
+    "@nestjs/common": "^9.4.0",
+    "@nestjs/core": "^9.4.0",
+    "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/schematics": "^9.1.0",
+    "@nestjs/testing": "^9.4.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.1.3",
+    "@types/passport-jwt": "^3.0.8",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "firebase-admin": "^11.8.0",
+    "@types/jest": "^29.5.1",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "prettier": "^2.8.8",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
-    "ts-node": "^9.1.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "rimraf": "^5.0.0",
+    "rxjs": "^7.8.1",
+    "ts-jest": "^29.1.0",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.0.4"
   },
   "jest": {
     "moduleFileExtensions": [
